--- a/module_999_test/lesson_001_test/student_tasks/task1.ipynb
+++ b/module_999_test/lesson_001_test/student_tasks/task1.ipynb
@@ -12,21 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "Hello!!!!!\n"
      ]
     }
    ],
    "source": [
     "# пиши свой код\n",
-    "print('Hello!')"
+    "print('Hello!!!!!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -45,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
